log/build_2023-02-09_02-39-44/mypkg/stderr.log
  File "/home/masanao/ros2_ws/install/mypkg/lib/python3.6/site-packages/mypkg/talker.py", line 15
    msg.data = .n
               ^
SyntaxError: invalid syntax

